--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,18 +1,78 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 
 {% block body %}
+    <div class="container-fluid loginPageContainer">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="row" style="background: #FBFBFB;">
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <h4 class="pull-left" style="margin:10px 0px;">&nbsp;Products&nbsp;</h4>
+                </div>
 
+                <span class="col-lg-8 col-md-8 col-sm-8">
+                    <div class="pull-right">
+                        <button style="margin-top:2px;" class="btn btn-default"
+                                onclick='window.location.href="{{ path('app_products_new') }}"'>
+                            Add Product
+                        </button>
+                    </div>
+                </span>
+            </div>
 
-    <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email:</label>
+            <table class="table" id="product_table">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Product Name</th>
+                    <th>Product Image</th>
+                    <th>List Price</th>
+                    <th>Qty In Stock</th>
+                    <th>Part Number</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for product in products %}
+                    <tr>
+                        <td>{{ product.id }}</td>
+                        <td>{{ product.productName }}</td>
+                        <td>{{ product.productImage }}</td>
+                        <td>{{ product.listPrice }}</td>
+                        <td>{{ product.qtyInStock }}</td>
+                        <td>{{ product.partNumber }}</td>
+                        <td>
+                            <button style="margin:10px 0px;" class="btn btn-primary"
+                                    onclick='window.location.href="{{ path('app_products_show', {'id': product.id}) }}"'>
+                                View
+                            </button>
+                            <button style="margin:10px 0px;" class="btn btn-success"
+                                    onclick='window.location.href="{{ path('app_products_edit', {'id': product.id}) }}"'>
+                                Edit
+                            </button>
 
-        <label for="password">Password:</label>
+                            <form style="display: inline-block;" method="post" action="{{ path('app_products_delete', {'id': product.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
+                                <button style="margin:10px 0px;" class="btn btn-danger" >
+                                    Delete
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="7">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+{% endblock %}
 
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"> #}
-
-        <button type="submit">login</button>
-        <a href="{{ path('app_logout') }}" type="submit">Logout</a>
-    </form>
+{% block javascripts %}
+    <script>
+        //Document Ready Function
+        $(function() {
+            var table = $('#product_table').DataTable( {} );
+        });
+    </script>
 {% endblock %}
